@@ -11,6 +11,7 @@ Jump Start Changelog
 * Fixed: Parallax background fallback not being horizontally centered in IE9.
 * Fixed: Added missing localization for theme bases admin page text.
 * Fixed: Live changelog link in theme options footer not working.
+* Fixed: Blog and Post Showcase page templates not obeying WordPress page privacy settings.
 * Improved: Security of outputted localized text strings.
 * Improved: Security of outputted data from various user-edited elements.
 * Removed: Support of `magic_quotes_gpc` for those using unsupported versions of PHP.
